[STREAMPIPES-193] Fix layout bug in pipeline details view

--- a/ui/src/app/pipeline-details/pipeline-details.component.scss
+++ b/ui/src/app/pipeline-details/pipeline-details.component.scss
@@ -16,3 +16,7 @@
  *
  */
 
+.md-padding {
+  padding: 10px;
+}
+
